syntax = "proto3";

package natbeeapi;

service NatBeeApi {
    rpc Attach(AttachRequest) returns(Empty);
    rpc Detach(AttachRequest) returns(Empty);
    rpc AddService(AddRequest) returns(Empty);
    rpc DelService(DelRequest) returns(Empty);
    rpc Save(SaveReq) returns(Empty);
    rpc Poll(PollRequest) returns(PollResponse);
    rpc Push(PushRequest) returns(Empty);
}

enum ServiceType {
    DEFAULT = 0;
    NAT     = 1;
    FNAT    = 2;
}

enum Protocol {
    INVALID = 0;
    TCP     = 6;
    UDP     = 17;
}

message Empty {}

message ServiceKey {
    string   ip       = 1;
    uint32   port     = 2;
    Protocol protocol = 3;
}

message Session {
    string   client_ip    = 1;
    uint32   client_port  = 2;
    string   virtual_ip   = 3;
    uint32   virtual_port = 4;
    string   local_ip     = 5;
    uint32   local_port   = 6;
    string   real_ip      = 7;
    uint32   real_port    = 8;
    Protocol protocol = 9;
}

message ServiceAttr {
    string          local_ip        = 1;
    uint32          real_port       = 2;
    repeated string real_server_ips = 5;
}

message AddRequest {
    ServiceType type = 1;
    ServiceKey  key  = 2;
    ServiceAttr val  = 3;
}

message DelRequest {
    ServiceType type = 1;
    ServiceKey  key  = 2;
}

message AttachRequest {
    ServiceType type = 1;
    string      ip   = 2;
}

message SaveReq {
    string file_path = 1;
}

message PollRequest {
    ServiceType type = 1;
}

message PollResponse {
    repeated Session nat_sessions    = 1;
    repeated Session fnat_sessions   = 2;
    string           transport_group = 12;
    string           version         = 13;
}

message PushRequest {
    repeated Session nat_sessions    = 1;
    repeated Session fnat_sessions   = 2;
    string           transport_group = 12;
    string           version         = 13;
}